--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         left: 0;
       }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5677395868811418"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
