feat: add static pages and improve SEO with meta tags, sitemap, and robots.txt

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-BR" style="height: 100%; overflow: hidden;">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/weather-icon.svg" />
@@ -7,7 +7,14 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <title>Previsão do Tempo - Weather Forecast App</title>
+    <meta name="description" content="VemChuva Brasil oferece previsões detalhadas, radar interativo e alertas climáticos em tempo real para qualquer cidade do país." />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="VemChuva Brasil - Previsão do Tempo" />
+    <meta property="og:description" content="Mapa interativo, alertas e previsão do tempo hora a hora em cidades brasileiras." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vemchuvabrasil.com" />
+    <meta name="theme-color" content="#667eea" />
+    <title>VemChuva Brasil - Previsão do Tempo</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5677395868811418"
      crossorigin="anonymous"></script>
   </head>
